--- a/app/assets/stylesheets/todos.scss
+++ b/app/assets/stylesheets/todos.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the Todos controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 18px;
@@ -17,8 +14,25 @@ body {
   }
 
   form {
-    padding: 0 0 20px;
-  }
+      padding: 0 0 20px;
+
+      input.error {
+        border: 1px solid #f00;
+      }
+
+      small.error {
+        font-size: 12px;
+        color: #f00;
+        font-style: italic;
+
+        &::before {
+          content: ">";
+          font-weight: bolder;
+          padding: 0 3px;
+          color: #999;
+        }
+      }
+    }
 
   input[type=text] {
     display: block;
